--- a/MLcourse/final-group-project.html
+++ b/MLcourse/final-group-project.html
@@ -281,7 +281,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
             <section class="normal" id="section-">
 <div id="final-group-project" class="section level1 unnumbered">
 <h1>Final Group Project</h1>
-<p>The premise of this project is very simple. You are to pick one of the datasets below or a real data set for which you believe there are interesting questions to answer. You will then try out all the different statistical learning approaches that we have covered in this course to try to find the best way to answer these questions. The project will be completed in groups of 2 or 3 people each.</p>
+<p>The premise of this project is very simple. You are to pick one of the datasets below or a real dataset for which you believe there are interesting questions to answer. You will then try out all the different statistical learning approaches that we have covered in this course to try to find the best way to answer these questions. The project will be completed in groups of 2 or 3 people each.</p>
 <div id="deliverables" class="section level3 unnumbered">
 <h3>Deliverables</h3>
 <p>This project includes two deliverables:</p>
@@ -317,7 +317,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><a href="https://www.kaggle.com/c/titanic">Titanic</a>: Download the dataset from  <a target="_blank" href="datasets/Titanic.csv"> here <i class="fa fa-table" aria-hidden="true"></i></a>.</li>
 <li><a href="https://www.kaggle.com/deepmatrix/imdb-5000-movie-dataset">IMDB Movies</a>: Download the dataset from  <a target="_blank" href="datasets/imdb_metadata.csv"> here <i class="fa fa-table" aria-hidden="true"></i></a>.</li>
 </ul>
-<p>Or you can choose a dataset from the following data repositories:</p>
+<p>You are free to use another dataset for which you believe there are interesting questions to answer. Or you can choose a dataset from the following data repositories:</p>
 <ul>
 <li><a href="www.data.gov.fr">Open Gov. Data</a>.</li>
 <li><a href="www.kaggle.com">Kaggle</a>.</li>
