--- a/teaching/index.html
+++ b/teaching/index.html
@@ -241,7 +241,7 @@
     <ul>
       <li>Prepared by me for Spring 16-17:
         <ul>
-          <li>Discrete Random Variables: 1 <a target="_blank" href="../documents/proba-spring-16-17-1.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, 2 <a target="_blank" href="../documents/proba-spring-16-17-2.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
+          <li>Discrete Random Variables: <a target="_blank" href="../documents/proba-spring-16-17-1.pdf">1 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, 2 <a target="_blank" href="../documents/proba-spring-16-17-2.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
           <li>Continuous Random Variables: 1st &amp; 2nd parts <a target="_blank" href="../documents/proba-spring-16-17-3.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
           <li>Exercices: 1st part <a target="_blank" href="../documents/proba-spring-16-17-td1.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, 2nd part <a target="_blank" href="../documents/proba-spring-16-17-td2.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
         </ul>
