--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Course repository . * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: - Discrete Random Variables: 1 , 2 . - Continuous Random Variables: 1st &amp; 2nd...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Course repository . * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: - Discrete Random Variables: 1 , 2 . - Continuous Random Variables: . - Exercices:...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Course repository . * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: - Discrete Random Variables: 1 , 2 . - Continuous Random Variables: 1st &amp; 2nd...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Prepared by me for Spring 16-17: Course repository . * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: - Discrete Random Variables: 1 , 2 . - Continuous Random Variables: . - Exercices:...">
   
 
   
@@ -241,9 +241,9 @@
     <ul>
       <li>Prepared by me for Spring 16-17:
         <ul>
-          <li>Discrete Random Variables: <a target="_blank" href="../documents/proba-spring-16-17-1.pdf">1 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, 2 <a target="_blank" href="../documents/proba-spring-16-17-2.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
-          <li>Continuous Random Variables: 1st &amp; 2nd parts <a target="_blank" href="../documents/proba-spring-16-17-3.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
-          <li>Exercices: 1st part <a target="_blank" href="../documents/proba-spring-16-17-td1.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, 2nd part <a target="_blank" href="../documents/proba-spring-16-17-td2.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
+          <li>Discrete Random Variables: <a target="_blank" href="../documents/proba-spring-16-17-1.pdf">1 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, <a target="_blank" href="../documents/proba-spring-16-17-2.pdf">2 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
+          <li>Continuous Random Variables: <a target="_blank" href="../documents/proba-spring-16-17-3.pdf"><i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
+          <li>Exercices: <a target="_blank" href="../documents/proba-spring-16-17-td1.pdf">1 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>, <a target="_blank" href="../documents/proba-spring-16-17-td2.pdf">2 <i class="fa fa-file-pdf-o" aria-hidden="true"></i></a>.</li>
         </ul>
       </li>
       <li>
